--- a/views/television/new.erb
+++ b/views/television/new.erb
@@ -26,7 +26,7 @@
       <input id="stock_number_input" type="number" name="stock">
     </label>
 
-    <div id="submit_button_wrapper">
+    <div class="submit_button_wrapper">
       <input type="submit" value="Add model">
     </div>
   </form>
