--- a/views/manufacturer/new.erb
+++ b/views/manufacturer/new.erb
@@ -16,6 +16,11 @@
       - model number
     </label>
 
+    <label class="new_form_label">
+      Markup:
+      <input type="text" name="markup" id="markup_input">
+    </label>
+
     <div class="submit_button_wrapper" id="add_manufacturer_button_wrapper">
       <input type="submit" value="Add manufacturer">
     </div>
