--- a/views/television/new.erb
+++ b/views/television/new.erb
@@ -26,6 +26,12 @@
       <input id="stock_number_input" type="number" name="stock">
     </label>
 
+    <label class="new_form_label">
+      Cost Price:
+      <input type="text" name="cost_price" id="cost_price_input">
+    </label>
+
+
     <div class="submit_button_wrapper">
       <input type="submit" value="Add model">
     </div>
