--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,6 @@ nav {
 nav a {
   color: #ffffff;
   text-decoration: none;
-
 }
 
 nav ul {
@@ -110,7 +109,8 @@ nav ul li h1 {
   border: 0px solid #ffffff;
   background-color: #231f20;
   color: #ffffff;
-  border-radius: 7%
+  border-radius: 7%;
+  cursor: pointer;
 }
 
 table {
