added mobile support to site

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ nav {
   color: #FFFFFF;
 }
 
-nav a {
+.menu_bar a {
   color: #ffffff;
   text-decoration: none;
 }
@@ -20,7 +20,7 @@ nav ul {
   margin: 0px;
 }
 
-nav ul li {
+.menu_bar ul li {
   display: inline-block;
   list-style-type: none;
   text-decoration: none;
@@ -32,6 +32,17 @@ nav ul li h1 {
   font-size: 2.5em;
   font-weight: lighter;
 }
+
+footer {
+  background-color: #231F20;
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  bottom: 0;
+  font-size: 3em;
+  display: none
+}
+
 
 #nav_image {
   margin-right: 5px;
@@ -105,14 +116,93 @@ nav ul li h1 {
   margin-left: 12px;
 }
 
-.delete_button {
+.submit_button {
   border: 0px solid #ffffff;
   background-color: #231f20;
   color: #ffffff;
-  border-radius: 7%;
   cursor: pointer;
 }
 
 table {
   width: 90%;
+}
+
+/* MOBILE SUPPORT */
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (orientation: portrait) {
+    footer {
+      display: block;
+    }
+
+    nav {
+      display: none;
+    }
+
+    #general_wrapper {
+      width: 100%;
+      font-size: 1.75em;
+      margin-top: 0px
+    }
+
+    table {
+      margin-left:auto;
+      margin-right: auto
+    }
+
+    .submit_button {
+      font-size: 1em;
+    }
+
+    .new_form_label {
+      font-size: 1.75em
+    }
+
+    select {
+      font-size: 0.9em
+    }
+
+    input {
+      font-size: 0.9em;
+      border: 1px solid #BBBBBB;
+    }
+
+    select {
+      border: 1px solid #BBBBBB;
+    }
+
+    #stock_number_input {
+      margin-left: 17px
+    }
+
+    #cost_price_input {
+      margin-left: 90px;
+    }
+
+    #manufacturer_drop_down {
+      margin-left: 34px
+    }
+
+    .submit_button_wrapper {
+      font-size: 2em;
+      text-align: center;
+      margin-left: auto;
+      margin-top: 30px
+    }
+
+    #model_temp_input {
+      margin-left: ;
+      width: 120px;
+    }
+
+    #manufacturer_name_input {
+      margin-left: 130px
+    }
+
+    #markup_input {
+      margin-left: 97px
+    }
+
 }
