--- a/views/manufacturer/new.erb
+++ b/views/manufacturer/new.erb
@@ -22,7 +22,7 @@
     </label>
 
     <div class="submit_button_wrapper" id="add_manufacturer_button_wrapper">
-      <input type="submit" value="Add manufacturer">
+      <input type="submit" value="Add manufacturer" class="submit_button">
     </div>
   </form>
 </div>
