--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,17 +6,25 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <nav>
+<nav class="menu_bar">
     <ul>
       <li id="nav_image"><img src="/assets/icons/icon_cropped.jpg" alt="Trevie's face"></li>
       <li><h1>Trevie's Tellies</h1></li>
       <li><a href="/">Home</a></li>
       <li><a href="/televisions/new">Add model</a></li>
       <li><a href="/manufacturers/new">Add manufacturer</a></li>
-
     </ul>
   </nav>
 
   <%= yield %>
+
+  <footer class="menu_bar">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/televisions/new">Add model</a></li>
+      <li><a href="/manufacturers/new">Add manufacturer</a></li>
+    </ul>
+  </footer>
+
 </body>
 </html>
