--- a/views/television/index.erb
+++ b/views/television/index.erb
@@ -15,7 +15,7 @@
       <td><%= television.stock() %></td>
       <td>£<%= television.cost_price() %></td>
       <td>£<%= television.retail_price() %></td>
-      <td><form action="/televisions/<%= television.id() %>/delete" method="post"><input class="delete_button" type="submit" value="Delete"></form></td>
+      <td><form action="/televisions/<%= television.id() %>/delete" method="post"><input class="submit_button" type="submit" value="Delete"></form></td>
     </tr>
     <% end %>
   </table>
