--- a/views/television/index.erb
+++ b/views/television/index.erb
@@ -6,7 +6,7 @@
   <table>
     <tr><th>Model No.</th><th>Manufacturer</th><th>Stock</th><th>Cost Price</th><th>Retail Price</th></tr>
 
-    <% @televisions.sort_by! { |television| television.manufacturer.name() } %>
+    <% @televisions.sort! { |television1, television2| [ television1.manufacturer.name(), television2.model_no(), television2.retail_price() ] <=> [ television2.manufacturer.name(), television1.model_no(), television1.retail_price() ] } %>
 
     <% for television in @televisions %>
     <tr>
