--- a/public/style.css
+++ b/public/style.css
@@ -30,13 +30,6 @@ nav ul {
   vertical-align: middle;
 }
 
-.menu_bar a:hover {
-  color: #000000;
-  border: 2px solid #ffffff;
-  background-color: #ffffff;
-  color: #000000
-}
-
 nav ul li h1 {
   font-size: 2.5em;
   font-weight: lighter;
@@ -107,12 +100,8 @@ footer {
   text-align: right;
 }
 
-#cost_price_input {
+#cost_price_input, #markup_input {
   margin-left: 31px;
-}
-
-#markup_input {
-  margin-left: 31px
 }
 
 .new_form_label {
@@ -133,7 +122,7 @@ footer {
   transition-duration: 0.4s;
 }
 
-.submit_button:hover {
+.submit_button:hover, .menu_bar a:hover {
   border: 2px solid #231f20;
   background-color: #ffffff;
   color: #000000;
