--- a/public/style.css
+++ b/public/style.css
@@ -50,9 +50,8 @@ footer {
   margin-right: 5px;
 }
 
-#general_wrapper {
+.general_wrapper {
   margin: 5px 10px 0px 10px;
-  width: 75%;
   align-self: center;
   text-align: center;
   margin-right: auto;
@@ -60,14 +59,22 @@ footer {
   border: 1px solid #BBBBBB;
 }
 
-#general_wrapper_heading {
+#television_index {
+  width: 75%;
+}
+
+#manufacturer_index {
+  width: 55%
+}
+
+.general_wrapper_heading {
   text-align: left;
   background-color: #231F20;
   margin-top: 0px;
   padding: 5px 0px 5px 0px;
 }
 
-#general_wrapper_heading h1 {
+.general_wrapper_heading h1 {
   margin-left: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
