--- a/views/manufacturer/new.erb
+++ b/views/manufacturer/new.erb
@@ -1,5 +1,5 @@
-<div id="general_wrapper">
-  <div id="general_wrapper_heading">
+<div class="general_wrapper" id="new_manufacturer">
+  <div class="general_wrapper_heading">
     <h1> Add manufacturer </h1>
   </div>
 
