--- a/views/television/new.erb
+++ b/views/television/new.erb
@@ -1,5 +1,5 @@
-<div id="general_wrapper">
-  <div id="general_wrapper_heading">
+<div class="general_wrapper" id="new_model">
+  <div class="general_wrapper_heading">
     <h1> Add model </h1>
   </div>
 
