--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,7 @@
       <li><h1>Trevie's Tellies</h1></li>
       <li><a href="/">Home</a></li>
       <li><a href="/televisions/new">Add model</a></li>
+      <li><a href="/manufacturers">List manufacturers</a></li>
       <li><a href="/manufacturers/new">Add manufacturer</a></li>
     </ul>
   </nav>
