--- a/views/television/order.erb
+++ b/views/television/order.erb
@@ -1,5 +1,5 @@
-<div id="general_wrapper">
-  <div id="general_wrapper_heading">
+<div class="general_wrapper" id="place_order">
+  <div class="general_wrapper_heading">
     <h1> Make order </h1>
   </div>
 
