add complete sales tab, messy code though

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,10 +10,11 @@
     <ul>
       <li id="nav_image"><img src="/assets/icons/icon_cropped.jpg" alt="Trevie's face"></li>
       <li><h1>Trevie's Tellies</h1></li>
-      <li><a href="/">Home</a></li>
-      <li><a href="/televisions/new">Add model</a></li>
-      <li><a href="/manufacturers">List manufacturers</a></li>
-      <li><a href="/manufacturers/new">Add manufacturer</a></li>
+      <li><a href="/">Televisions</a></li>
+      <li><a href="/manufacturers">Manufacturers</a></li>
+      <li><a href="/customers">Customers</a></li>
+      <li><a href="/sales">Sales</a></li>
+      <li><a href="/sales/new">New sale</a></li>
     </ul>
   </nav>
 
@@ -23,7 +24,6 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/televisions/new">Add model</a></li>
-      <li><a href="/manufacturers/new">Add manufacturer</a></li>
     </ul>
   </footer>
 
