--- a/views/manufacturer/index.erb
+++ b/views/manufacturer/index.erb
@@ -1,6 +1,7 @@
 <div class="general_wrapper" id="manufacturer_index">
   <div class="general_wrapper_heading">
     <h1> Manufacturers </h1>
+    <a href="/manufacturers/new">Add manufacturer</a>
   </div>
 
   <table id="manufacturer_table">
