--- a/public/style.css
+++ b/public/style.css
@@ -59,7 +59,7 @@ footer {
   border: 1px solid #BBBBBB;
 }
 
-#television_index, #new_model, #place_order {
+#television_index, #new_model, #place_order, #customer_index, #new_customer, #edit_customer, #sales_index, #new_sale, #sales_full_index {
   width: 75%;
 }
 
@@ -74,13 +74,20 @@ footer {
   padding: 5px 0px 5px 0px;
 }
 
-.general_wrapper_heading h1 {
+.general_wrapper_heading h1, .general_wrapper_heading a {
   margin-left: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
   vertical-align: middle;
   color: #ffffff;
   font-weight: lighter;
+  display: inline-block;
+}
+
+.general_wrapper_heading a {
+  text-decoration: none;
+  transition-duration: 0.4s;
+  border: 2px solid #231f20;
 }
 
 #stock_number_input {
@@ -107,6 +114,10 @@ footer {
   text-align: right;
 }
 
+#television_drop_down {
+  margin-left: 15px;
+}
+
 #cost_price_input, #markup_input {
   margin-left: 31px;
 }
@@ -129,10 +140,14 @@ footer {
   transition-duration: 0.4s;
 }
 
-.submit_button:hover, .menu_bar a:hover {
+.submit_button:hover, .menu_bar a:hover, .general_wrapper_heading a:hover {
   border: 2px solid #231f20;
   background-color: #ffffff;
   color: #000000;
+}
+
+.customer_name_input {
+  margin-left: 4px;
 }
 
 table {
@@ -191,7 +206,7 @@ table {
     }
 
     #cost_price_input {
-      margin-left: 90px;
+      margin-left: 85px;
     }
 
     #manufacturer_drop_down {
@@ -218,7 +233,7 @@ table {
       margin-left: 97px
     }
 
-    #television_index .submit_button {
+    #television_index .submit_button, .general_wrapper_heading a {
       display: none;
     }
 
