slight refactor of sales index for individual customers

--- a/views/sale/full_index.erb
+++ b/views/sale/full_index.erb
@@ -1,6 +1,7 @@
 <div class="general_wrapper" id="sales_full_index">
   <div class="general_wrapper_heading">
     <h1> All sales </h1>
+    <a href="/sales/new">New sale</a>
   </div>
 
   <table id="customer_table">
