--- a/views/sale/index.erb
+++ b/views/sale/index.erb
@@ -14,9 +14,9 @@
     <tr>
       <td><%= @customer.last_name() %></td>    
       <td><%= @customer.first_name() %></td>    
-      <td><%= ( Television.find( sale.television_id() ).model_no() ) %></td>
-      <td><%= ( Television.find( sale.television_id() ).manufacturer().name() ) %></td>      
-      <td><%= ( Television.find( sale.television_id() ).retail_price() ) %></td>  
+      <td><%= sale.television.model_no() %></td>
+      <td><%= sale.television.manufacturer().name() %></td>      
+      <td><%= sale.television.retail_price() %></td>  
       <td><form action="/customers/<%= @customer.id() %>/sales/<%= sale.id() %>/delete" method="post"><input class="submit_button" type="submit" value="Delete"></form></td>
     </tr>
     <% end %>
