--- a/views/sale/index.erb
+++ b/views/sale/index.erb
@@ -1,4 +1,4 @@
-<div class="general_wrapper" id="sales_index">
+<div class="general_wrapper" id="customer_sales_index">
   <div class="general_wrapper_heading">
     <h1> Customer sales </h1>
     <a href="/customers/<%= @customer.id() %>/sales/new">New sale</a>
