change new customer button to add customer button

--- a/views/customer/index.erb
+++ b/views/customer/index.erb
@@ -1,7 +1,7 @@
 <div class="general_wrapper" id="customer_index">
   <div class="general_wrapper_heading">
     <h1> Customers </h1>
-    <a href="/customers/new">New customer</a>
+    <a href="/customers/new">Add customer</a>
   </div>
 
 
