--- a/views/television/index.erb
+++ b/views/television/index.erb
@@ -24,3 +24,18 @@
     <% end %>
   </table>
 </div>
+
+<footer class="menu_bar">
+  <ul>
+    <form action="/televisions/filter" method="">
+      <select name="manufacturer_id" id="manufacturer_drop_down">
+
+        <% for manufacturer in @manufacturers %>
+        <option value=<%= manufacturer.id() %>><%= manufacturer.name() %></option>
+        <% end %>
+
+      </select>
+      <input type="submit" value="Filter" class="submit_button" id="mobile_friendly">
+    </form>
+  </ul>
+</footer>
