--- a/views/television/filtered_index.erb
+++ b/views/television/filtered_index.erb
@@ -21,3 +21,11 @@
     <% end %>
   </table>
 </div>
+
+<footer class="menu_bar">
+  <ul>
+    <form action="/televisions" method="get">
+      <input type="submit" value="Back" class="submit_button" id="mobile_friendly">
+    </form>
+  </ul>
+</footer>
