--- a/views/television/index.erb
+++ b/views/television/index.erb
@@ -27,7 +27,7 @@
 
 <footer class="menu_bar">
   <ul>
-    <form action="/televisions/filter" method="">
+    <form action="/televisions/filter" method="get">
       <select name="manufacturer_id" id="manufacturer_drop_down">
 
         <% for manufacturer in @manufacturers %>
