--- a/views/sale/full_index.erb
+++ b/views/sale/full_index.erb
@@ -15,7 +15,7 @@
       <td><%= sale.customer.first_name() %></td>
       <td><%= sale.television.model_no() %></td>
       <td><%= sale.television.manufacturer.name() %></td>      
-      <td><%= sale.television.retail_price() %></td>  
+      <td>£<%= sale.television.retail_price() %></td>  
       <td><form action="/customers/<%= sale.customer.id() %>/sales"  method="get"><input class="submit_button" type="submit" value="Customer sales"></form></td>
       <td><form action="/customers/<%= sale.customer.id() %>/sales/<%= sale.id() %>/delete" method="post"><input class="submit_button" type="submit" value="Delete"></form></td> 
     </tr>
