--- a/views/sale/index.erb
+++ b/views/sale/index.erb
@@ -7,7 +7,7 @@
 
   <table id="customer_table">
     <tr><th>Last Name</th><th>First Name</th><th>Serial Number</th><th>Manufacturer</th><th>Total</th></tr>
-    
+
     <% for sale in @sales %>
     <tr>
       <td><%= @customer.last_name() %></td>
@@ -15,7 +15,9 @@
       <td><%= sale.television.model_no() %></td>
       <td><%= sale.television.manufacturer().name() %></td>
       <td>£<%= sale.television.retail_price() %></td>
-      <td><form action="/customers/<%= @customer.id() %>/sales/<%= sale.id() %>/delete" method="post"><input class="submit_button" type="submit" value="Delete"></form></td>
+      <td><form action="/customers/<%= @customer.id() %>/sales/<%= sale.id() %>/delete" method="post">
+        <input class="submit_button" type="submit" value="Delete">
+      </form></td>
     </tr>
     <% end %>
   </table>
