--- a/views/television/index.erb
+++ b/views/television/index.erb
@@ -15,8 +15,10 @@
       <td><%= television.stock() %></td>
       <td>£<%= television.cost_price() %></td>
       <td>£<%= television.retail_price() %></td>
-      <td><form action="/televisions/<%= television.id() %>/order" method="get"><input class="submit_button" type="submit" value="Order"></form></td>
-      <td><form action="/televisions/<%= television.id() %>/delete" method="post"><input class="submit_button" type="submit" value="Delete"></form></td>
+      <td><form action="/televisions/<%= television.id() %>/order" method="get">
+        <input class="submit_button" type="submit" value="Order"></form></td>
+      <td><form action="/televisions/<%= television.id() %>/delete" method="post">
+        <input class="submit_button" type="submit" value="Delete"></form></td>
     </tr>
     <% end %>
   </table>
